# geniable

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/commands/: analyze-threads.md
.claude/prompts/: thread-analysis-agent.md
agent/: __init__.py  agent.py  cloud_sync.py  evaluation_orchestrator.py  mcp_client.py  report_generator.py  state_manager.py
agent/api_clients/: __init__.py  evaluation_client.py  integration_client.py
agent/models/: __init__.py  evaluation.py  mcp.py
cli/: README.md  __init__.py  __main__.py  auth.py  auth_middleware.py  claude_code_setup.py  config_manager.py  injector.py  issue_display.py  jira_client.py  main.py  output_formatter.py  secrets_manager.py  service_validator.py  validators.py  version_check.py  wizard.py
cli/agents/: Geni Analyzer.md  Issue Resolver.md  __init__.py
cli/commands/: __init__.py  analyze.py  issues.py  scaffold.py  ticket.py
cli/scaffold/: __init__.py  base.py  langgraph.py  pi.py  strands.py
cli/skills/: __init__.py  analyze-latest.md  geni-init.md  instrument-tracing.md  issues.md
documents/: model-resilience-fallback-cascades.md
shared/: __init__.py
shared/models/: __init__.py  config.py  issue_card.py
shared/utils/: __init__.py  logging.py
tests/cli/: test_issue_display.py  test_issues_command.py  test_jira_client.py  test_mark_done_command.py  test_scaffold.py
